force-app/main/default/objects/REP_Rating__c/REP_Rating__c.object-meta.xml
<CustomObject>
    <label>REP Rating</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>REP Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REP Ratings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>