force-app/main/default/objects/REP_Rating__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who wrote this review</description>
    <inlineHelpText>Who wrote this review</inlineHelpText>
    <label>Author</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>REP Ratings</relationshipLabel>
    <relationshipName>REP_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>