force-app/main/default/objects/REP_Rating__c/fields/Dispute_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Timestamp__c</fullName>
    <label>Dispute Timestamp</label>
    <type>DateTime</type>
</CustomField>