force-app/main/default/objects/REP_Rating__c/fields/Disputed__c.field-meta.xml
<CustomField>
    <fullName>Disputed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that current customer rating is being disputed by REP</description>
    <inlineHelpText>Check here if the current customer rating is being disputed</inlineHelpText>
    <label>Disputed</label>
    <type>Checkbox</type>
</CustomField>