force-app/main/default/objects/REP_Rating__c/fields/Non_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Non_Account_Email__c</fullName>
    <description>If the review was submitted by someone who is not a registered customer, this is the user&#39;s email address.</description>
    <inlineHelpText>If the review was submitted by someone who is not a registered customer, this is the user&#39;s email address.</inlineHelpText>
    <label>Non-Account Email</label>
    <type>Email</type>
</CustomField>