force-app/main/default/objects/REP_Rating__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>REP Ratings</relationshipLabel>
    <relationshipName>REP_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>