force-app/main/default/objects/REP_Rating__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>REP Ratings</relationshipLabel>
    <relationshipName>REP_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>