force-app/main/default/objects/REP_Rating__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This review can be shown on the site</description>
    <inlineHelpText>This review can be shown on the site</inlineHelpText>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>