force-app/main/default/objects/REP_Rating__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <defaultValue>5</defaultValue>
    <inlineHelpText>Customer rating (1=low, 5=high)</inlineHelpText>
    <label>Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>