force-app/main/default/objects/REP_Rating__c/fields/Reason_Published__c.field-meta.xml
<CustomField>
    <fullName>Reason_Published__c</fullName>
    <description>Why was this review published, or how was it verified?  Please chatter any notes or details.</description>
    <inlineHelpText>Why was this review published, or how was it verified?  Please chatter any notes or details.</inlineHelpText>
    <label>Reason Published</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill Upload</fullName>
            </value>
            <value>
                <fullName>Confirmed with Utility</fullName>
            </value>
            <value>
                <fullName>Purchased on TrueCost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>