force-app/main/default/objects/REP_Rating__c/fields/REP_Comments__c.field-meta.xml
<CustomField>
    <fullName>REP_Comments__c</fullName>
    <label>REP Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>