force-app/main/default/objects/REP_Rating__c/fields/REP_Profile__c.field-meta.xml
<CustomField>
    <fullName>REP_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which REP is this review about?</inlineHelpText>
    <label>REP Profile</label>
    <referenceTo>REP_Profile__c</referenceTo>
    <relationshipLabel>REP Ratings</relationshipLabel>
    <relationshipName>REP_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>