force-app/main/default/objects/REP_Rating__c/fields/REP_without_Order__c.field-meta.xml
<CustomField>
    <fullName>REP_without_Order__c</fullName>
    <label>REP without Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acacia Energy</fullName>
            </value>
            <value>
                <fullName>Affordable Power</fullName>
            </value>
            <value>
                <fullName>Ambit</fullName>
            </value>
            <value>
                <fullName>Amigo</fullName>
            </value>
            <value>
                <fullName>Andeler</fullName>
            </value>
            <value>
                <fullName>APNA Energy</fullName>
            </value>
            <value>
                <fullName>Beyond Power</fullName>
            </value>
            <value>
                <fullName>Bounce</fullName>
            </value>
            <value>
                <fullName>Breeze Energy</fullName>
            </value>
            <value>
                <fullName>Brilliant</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Cirro</fullName>
            </value>
            <value>
                <fullName>Clearview Energy</fullName>
            </value>
            <value>
                <fullName>Direct Energy</fullName>
            </value>
            <value>
                <fullName>Discount Power</fullName>
            </value>
            <value>
                <fullName>Dynowatt</fullName>
            </value>
            <value>
                <fullName>Energy Plus</fullName>
            </value>
            <value>
                <fullName>Entrust</fullName>
            </value>
            <value>
                <fullName>Everything Energy</fullName>
            </value>
            <value>
                <fullName>First Choice Power</fullName>
            </value>
            <value>
                <fullName>Frontier Utilities</fullName>
            </value>
            <value>
                <fullName>Gexa</fullName>
            </value>
            <value>
                <fullName>Green Mountain</fullName>
            </value>
            <value>
                <fullName>Hino Electric</fullName>
            </value>
            <value>
                <fullName>IGS Energy</fullName>
            </value>
            <value>
                <fullName>Infinite</fullName>
            </value>
            <value>
                <fullName>Just Energy</fullName>
            </value>
            <value>
                <fullName>Kona Energy</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>Liberty Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>