force-app/main/default/objects/REP_Rating__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>