force-app/main/default/objects/REP_Rating__c/fields/Site_Comments__c.field-meta.xml
<CustomField>
    <fullName>Site_Comments__c</fullName>
    <description>Comments on reviews that can show up on the site.</description>
    <label>Site Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>