force-app/main/default/objects/REP_Rating__c/fields/TrueCost_Comments__c.field-meta.xml
<CustomField>
    <fullName>TrueCost_Comments__c</fullName>
    <description>Internal response from REP comments.</description>
    <inlineHelpText>Internal response from REP comments.</inlineHelpText>
    <label>TrueCost Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>