force-app/main/default/objects/REP_Rating__c/fields/Wants_Contact__c.field-meta.xml
<CustomField>
    <fullName>Wants_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer wants REP contact about this</description>
    <inlineHelpText>Customer wants REP contact about this</inlineHelpText>
    <label>Okay to Contact</label>
    <type>Checkbox</type>
</CustomField>