force-app/main/default/objects/REP_Rating__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>REP_Profile__c</columns>
    <columns>REP_without_Order__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Published__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Rating__c</columns>
    <columns>Plan__c</columns>
    <columns>Order__c</columns>
    <columns>Author__c</columns>
    <columns>Review__c</columns>
    <columns>Wants_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All REP Ratings</label>
</ListView>