force-app/main/default/objects/REP_Rating__c/listViews/Published_Ratings_REP.listView-meta.xml
<ListView>
    <fullName>Published_Ratings_REP</fullName>
    <columns>NAME</columns>
    <columns>REP_Profile__c</columns>
    <columns>REP_without_Order__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Published__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Rating__c</columns>
    <columns>Plan__c</columns>
    <columns>Order__c</columns>
    <columns>Author__c</columns>
    <columns>Review__c</columns>
    <columns>Wants_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Published__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Published Ratings (REP)</label>
    <language>en_US</language>
</ListView>